load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_library")

py_binary(
    name = "main",
    srcs = ["main.py"],
    visibility = ["//:__subpackages__"],
    deps = ["@pip//pydantic"],
)

py_library(
    name = "gitlab_pipeline_generator",
    srcs = [
        "main.py",
        "types.py",
    ],
    visibility = ["//:__subpackages__"],
    deps = ["@pip//pydantic"],
)
