load("@rules_go//go:def.bzl", "go_library")
load("@bazel_skylib//lib:paths.bzl", "paths")

go_library(
    name = "leetcode",
    srcs = [
        "downloader.go",
        "generator.go",
        "main.go",
        "repo.go",
    ],
    importpath = "shishifubing.com/pkg/leetcode",
    visibility = ["//visibility:public"],
    deps = ["//pkg/leetcode/model"],
)
