load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "leetcode",
    srcs = [
        "downloader.go",
        "generator.go",
        "main.go",
        "repo.go",
    ],
    importpath = "shishifubing.com/pkg/leetcode",
    visibility = ["//visibility:public"],
    deps = ["//pkg/leetcode/model"],
)
