load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "versioning",
    srcs = ["main.go"],
    importpath = "shishifubing.com/pkg/versioning",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_git_go_git_v5//:go-git",
        "@com_github_go_git_go_git_v5//plumbing",
        "@com_github_go_git_go_git_v5//plumbing/object",
        "@org_golang_x_mod//semver",
    ],
)

go_test(
    name = "versioning_test",
    size = "small",
    srcs = ["main_test.go"],
    embed = [":versioning"],
    deps = [
        "@com_github_go_git_go_git_v5//:go-git",
        "@com_github_go_git_go_git_v5//plumbing/object",
    ],
)
