load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_library", "py_test")

py_binary(
    name = "check_pr_changes",
    srcs = ["check_pr_changes.py"],
    visibility = ["//:__subpackages__"],
)

py_library(
    name = "check_pr_changes",
    srcs = ["check_pr_changes.py"],
    visibility = ["//:__subpackages__"],
)

py_test(
    name = "test_check_pr_changes",
    srcs = ["test_check_pr_changes.py"],
)
