load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_library", "py_test")

py_binary(
    name = "main",
    srcs = ["main.py"],
    visibility = ["//:__subpackages__"],
)

py_library(
    name = "check_pr_changes",
    srcs = ["main.py"],
    visibility = ["//:__subpackages__"],
)

py_test(
    name = "main_test",
    srcs = ["main_test.py"],
)
