load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_test(
    name = "versioning_test",
    srcs = ["main_test.go"],
    embed = [":versioning_lib"],
    deps = [
        "@com_github_go_git_go_git_v5//:go-git",
        "@com_github_go_git_go_git_v5//plumbing/object",
    ],
)

go_library(
    name = "versioning_lib",
    srcs = ["main.go"],
    importpath = "shishifubing.com/tools/versioning",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_go_git_go_git_v5//:go-git",
        "@com_github_go_git_go_git_v5//plumbing",
        "@com_github_go_git_go_git_v5//plumbing/object",
        "@org_golang_x_mod//semver",
    ],
)

go_binary(
    name = "versioning",
    embed = [":versioning_lib"],
    visibility = ["//visibility:public"],
    data = ["//:.git"],
)
