load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "model_proto",
    srcs = ["types.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "model_go_proto",
    importpath = "shishifubing.com/pkg/leetcode/model",
    proto = ":model_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "model",
    srcs = ["main.go"],
    embed = [":model_go_proto"],
    embedsrcs = [
        "config.json",
        "submission.txt.tmpl",
    ],
    importpath = "shishifubing.com/pkg/leetcode/model",
    visibility = ["//visibility:public"],
)
