load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "database_cmd.go",
        "root_cmd.go",
        "server_cmd.go",
    ],
    importpath = "shishifubing.com/tianyi/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//tianyi/infrastructure",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_viper//:viper",
    ],
)
