load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "docs",
    srcs = [
        "dist.go",
        "docs.go",
    ],
    embedsrcs = [
        "swagger.json",
        "swagger.yaml",
    ],
    importpath = "shishifubing.com/tianyi/docs",
    visibility = ["//visibility:public"],
    deps = ["@com_github_swaggo_swag//:swag"],
)
