load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "infrastructure",
    srcs = [
        "app_infrastructure.go",
        "doc_infrastructure.go",
    ],
    importpath = "shishifubing.com/tianyi/infrastructure",
    visibility = ["//visibility:public"],
    deps = [
        "//tianyi/infrastructure/config",
        "//tianyi/infrastructure/lifecycle",
        "//tianyi/usecase/lifecycle",
    ],
)
