load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "infrastructure",
    srcs = [
        "app_infrastructure.go",
        "doc_infrastructure.go",
    ],
    importpath = "shishifubing.com/pkg/tianyi/infrastructure",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/tianyi/infrastructure/config",
        "//pkg/tianyi/infrastructure/lifecycle",
        "//pkg/tianyi/usecase/lifecycle",
    ],
)
