load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "pkg",
    srcs = [
        "doc_pkg.go",
        "password_pkg.go",
        "validate_pkg.go",
    ],
    importpath = "shishifubing.com/pkg/tianyi/pkg",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_playground_validator_v10//:validator",
        "@org_golang_x_crypto//argon2",
    ],
)

go_test(
    name = "pkg_test",
    srcs = ["password_pkg_test.go"],
    embed = [":pkg"],
)
