load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "usecase",
    srcs = [
        "app_usecase.go",
        "doc_usecase.go",
    ],
    importpath = "shishifubing.com/pkg/tianyi/usecase",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/tianyi/usecase/branch",
        "//pkg/tianyi/usecase/job",
        "//pkg/tianyi/usecase/jwt",
        "//pkg/tianyi/usecase/lifecycle",
        "//pkg/tianyi/usecase/pipeline",
        "//pkg/tianyi/usecase/pool",
        "//pkg/tianyi/usecase/project",
        "//pkg/tianyi/usecase/session",
        "//pkg/tianyi/usecase/user",
    ],
)
